--- a/.gitignore
+++ b/.gitignore
@@ -13,13 +13,11 @@ coverage/
 
 # Environment files
 .env
-.env.local
-.env.*.local
 
 # Logs
 logs/
 *.log
-
+uploads/
 # OS generated files
 .DS_Store
 Thumbs.db
