feat: Integrate Cloudinary for image uploads and update problem model to store image data

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,6 @@ MONGO_URI=your_mongo_uri/crowdsolve
 JWT_SECRET=this_is_a_secret_key45hjdsjdhfs
 NODE_ENV=development
 CLIENT_URL=http://localhost:5173
+CLOUDINARY_CLOUD_NAME=dxl3f6m3o
+CLOUDINARY_API_KEY=874123456789012
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
