--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "redux-thunk": "^3.1.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
